--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -3,13 +3,19 @@
 
   <head>
     <title>Taco Cloud</title>
-    <!-- <link rel="stylesheet" th:href="@{/styles.css}" /> -->
+    <link rel="stylesheet" th:href="@{/styles.css}" />
   </head>
 
   <body>
     <h1>Design your taco!</h1>
     <img th:src="@{/images/TacoCloud.png}"/>
+
+    
     <form method="POST" th:object="${taco}">
+      <span class="validationError" 
+        th:if="${#fields.hasErrors('ingredients')}"
+        th:errors="*{ingredients}"></span> 
+
     <div class="grid">
     <div class="ingredient-group" id="wraps">
       <h3>Designate your wrap:</h3>
@@ -56,6 +62,9 @@
     <div>
       <h3>Name your taco creation:</h3>
       <input type="text" th:field="*{name}"/>
+      <span class="validationError" 
+        th:if="${#fields.hasErrors('name')}"
+        th:errors="*{name}"> is required></span>
       <br/>
       <button>Submit Your Taco</button>
     </div>
